fix(ziro): volume bar alignment with spotify connect (#916)

--- a/Ziro/user.css
+++ b/Ziro/user.css
@@ -84,7 +84,10 @@
   left: 0;
   bottom: 84px;
 }
-.main-nowPlayingBar-nowPlayingBar:not(:only-child) .playback-progressbar:not(.volume-bar > .playback-progressbar) {
+/* for older versions */
+.main-nowPlayingBar-nowPlayingBar:not(:only-child) .playback-progressbar:not(.volume-bar > .playback-progressbar),
+/* for new version */
+.main-nowPlayingBar-nowPlayingBar:not(:only-child) .playback-progressbar:not(.volume-bar__slider-container > .playback-progressbar) {
   bottom: 108px;
 }
 .playback-bar {
